# yt-scraper-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  PIPELINE_TESTING.md  PIPELINE_TEST_SUMMARY.md  PROJECT_SCOPE.md  README.md  SECURITY.md  app_factory.py  download_video.py  downloader.py  job_tracker.py  main.py  pyproject.toml  requirements.txt  settings.py  test_pipeline.py  video_jobs.py  video_service.py
.github/workflows/: security.yml
deploy/: prod.yaml
docs/: STREAMING.md  vercel-sdk.md
extract-slides-py/: CLAUDE.md  pyproject.toml
extract-slides-py/src/extract_slides/: __init__.py  cli.py  extractor.py  video_analyzer.py  video_output.py
extract-slides-py/tests/: __init__.py  test_cli.py  test_extractor.py  test_video_analyzer.py
legacy_docs/: README.md
scripts/: check_s3.py  test_youtube.py
src/extract_slides/: cli.py  video_analyzer.py  video_output.py
src/slides_extractor/: app_factory.py  cli.py  constants.py  downloader.py  job_tracker.py  proxy_manager.py  settings.py  video_jobs.py  video_service.py
src/slides_extractor/extract_slides/: cli.py  text_detection.py  video_analyzer.py  video_output.py
tests/: conftest.py  test_check_blob_job_exists.py  test_check_s3_job_exists.py  test_cli.py  test_cli_refactored.py  test_download_retry.py  test_extractor.py  test_get_file_size.py  test_job_endpoints.py  test_pipeline_integration.py  test_proxy_manager.py  test_s3_integration.py  test_shutdown_readiness.py  test_text_detection.py  test_video_analyzer.py  test_video_service_phases.py  utils.py
