[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.11.12",
    "boto3",
    "opencv-python",
    "Pillow",
    "imagehash",
    "numpy",
    "pydantic",
    "click>=8.1.7",
]

[project.scripts]
extract-slides = "extract_slides.cli:main"
video-static-segments = "extract_slides.cli:video_main"

[tool.setuptools.package-data]
"extract_slides" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "ty",
]
