[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slides_extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.11.12",
    "boto3",
    "opencv-python-headless>=4.11.0.86",
    "Pillow",
    "imagehash",
    "numpy",
    "pydantic",
    "click>=8.1.7",
]

[project.scripts]
extract-slides = "extract_slides.cli:main"
video-static-segments = "extract_slides.cli:video_main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.setuptools.package-data]
"extract_slides" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "pytest",
    "pytest-asyncio>=0.23.7",
    "ruff",
    "ty",
    "types-requests>=2.32.4.20250913",
    "types-yt-dlp>=2025.11.12.20251115",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = ["asyncio: mark test to run in an asyncio event loop."]

