[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slides_extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.11.12",
    "boto3",
    "opencv-python-headless>=4.11.0.86",
    "Pillow",
    "imagehash",
    "numpy",
    "pydantic",
    "click>=8.1.7",
    "vercel>=0.3.6",
]

[project.scripts]
extract-slides = "slides_extractor.cli:cli"


[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "asyncio: mark test to run in an asyncio event loop.",
]

[tool.setuptools.package-data]
"extract_slides" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "boto3-stubs[s3]>=1.35.90",
    "httpx>=0.28.0",
    "mypy>=1.18.2",
    "pytest",
    "pytest-asyncio>=0.23.7",
    "ruff",
    "ty",
    "types-requests>=2.32.4.20250913",
    "types-yt-dlp>=2025.11.12.20251115",
]

